Fixed alignment issue in no data template

--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -265,18 +265,19 @@
 }
 
 :host /deep/ .no-data {
-  .no-data {
-    margin: 0 auto;
-    text-align: center;
-    padding: 100px;
+  position: absolute;
+  top: 75px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding: 100px;
 
-    h2 {
-      font-size: 24px;
-    }
+  h2 {
+    font-size: 24px;
+  }
 
-    [class^="flaticon-"]:before {
-      font-size: 30px;
-    }
+  [class^="flaticon-"]:before {
+    font-size: 30px;
   }
 }
 
