--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@ body {
 }
 
 .no-data {
+  position: absolute;
+  top: 75px;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
   padding: 100px;
